comas en clases y mas

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -77,7 +77,7 @@ html
 											span
 												label Marcar varios
 										.col-md-1.acomodo
-											input(type="checkbox",id="checkbox-a" class="regular-checkbox big-checkbox")
+											input(type="checkbox",id="checkbox-a", class="regular-checkbox big-checkbox")
 											label(for="checkbox-a")
 										.col-md-1.col-xs-6.text-center.vista.acomodo(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalFechaVenci', data-trigger='hover')
 											i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip",data-placement="top",title="Configurar fecha vencimiento")
@@ -93,7 +93,7 @@ html
 											.panel-heading
 												.row
 													.col-md-1
-														input.check(type="checkbox",id="checkbox-a1" class="regular-checkbox big-checkbox")
+														input.check(type="checkbox",id="checkbox-a1", class="regular-checkbox big-checkbox")
 														label(for="checkbox-a1")
 													.col-md-4.col-xs-12.text-center
 														h3.panel-title Titulo Cupón
@@ -116,7 +116,7 @@ html
 											.panel-heading
 												.row
 													.col-md-1
-														input.check(type="checkbox",id="checkbox-a2" class="regular-checkbox big-checkbox")
+														input.check(type="checkbox",id="checkbox-a2", class="regular-checkbox big-checkbox")
 														label(for="checkbox-a2")
 													.col-md-4.col-xs-12.text-center
 														h3.panel-title Titulo Cupón
@@ -139,7 +139,7 @@ html
 											.panel-heading
 												.row
 													.col-md-1
-														input.check(type="checkbox",id="checkbox-a3" class="regular-checkbox big-checkbox")
+														input.check(type="checkbox",id="checkbox-a3", class="regular-checkbox big-checkbox")
 														label(for="checkbox-a3")
 													.col-md-4.col-xs-12.text-center
 														h3.panel-title Titulo Cupón
@@ -162,7 +162,7 @@ html
 											.panel-heading
 												.row
 													.col-md-1
-														input.check(type="checkbox",id="checkbox-a4" class="regular-checkbox big-checkbox")
+														input.check(type="checkbox",id="checkbox-a4", class="regular-checkbox big-checkbox")
 														label(for="checkbox-a4")
 													.col-md-4.col-xs-12.text-center
 														h3.panel-title Titulo Cupón
@@ -185,7 +185,7 @@ html
 											.panel-heading
 												.row
 													.col-md-1
-														input.check(type="checkbox",id="checkbox-a5" class="regular-checkbox big-checkbox")
+														input.check(type="checkbox",id="checkbox-a5", class="regular-checkbox big-checkbox")
 														label(for="checkbox-a5")
 													.col-md-4.col-xs-12.text-center
 														h3.panel-title Titulo Cupón
