--- a/jade/index.jade
+++ b/jade/index.jade
@@ -218,7 +218,7 @@ html
 										.col-xs-12
 											.col-xs-9.col-md-offset-7.col-md-4
 												label(data-toggle="tooltip",data-placement="top",title="Selecciona archivo para crear multiples cupones") Alta de multiples cupones.
-												input.archivo.bnt.btn-default(type='file',id="file",accept=".txt")
+												input.archivo.btn-default(type='file',id="file",accept=".txt")
 										.col-xs-12
 											.col-xs-12.col-md-12
 												label(data-toggle="tooltip",data-placement="top",title="Ingresa código para el nuevo cupón")
@@ -299,9 +299,9 @@ html
 											.col-xs-12
 												br
 										.col-xs-12
-											.col-xs-12
+											.col-xs-4
 												.space
-												button.btn.btn-primary
+												button.btn.btn-primary.btn-lg.btn-block
 													|  Crear
 												.space
 			// Ventana Configurar editar
@@ -398,9 +398,9 @@ html
 								.col-xs-12
 									br
 							.col-xs-12
-								.col-xs-12
+								.col-xs-4
 									.space
-									button.btn.btn-primary
+									button.btn.btn-primary.btn-lg.btn-block
 										|  Guardar
 									.space
 		.space
