Estilos y nuevo ajuste en pantalla

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -87,120 +87,163 @@ html
 												i.spriteG2.descarga(data-toggle="tooltip",data-placement="top",title="Descarga el archivo de los cupones seleccionados")
 									br
 								.col-md-12
-									.col-md-offset-1.col-md-10.campania
+									.col-md-offset-1.col-md-11.campania
+										.panel.panel-default
+											.row
+												.col-md-1
+												.col-md-3.col-xs-12.text-center
+													h3.panel-title
+														strong Titulo
+												.col-md-3.col-xs-12.text-center
+													h3.panel-title
+														strong Fecha Inicio - Fecha Fin
+												.col-md-1.col-xs-6.text-center
+													h3.panel-title
+														strong Desc
+												.col-md-2.col-xs-6.text-center
+													h3.panel-title
+														strong Producto
+												
+									.col-md-offset-1.col-md-11.campania
 										.panel.panel-default
 											.panel-heading
 												.row
 													.col-md-1
 														input.check(type="checkbox",id="checkbox-a1", class="regular-checkbox big-checkbox")
 														label(for="checkbox-a1")
-													.col-md-4.col-xs-12.text-center
-														h3.panel-title Titulo Cupón
 													.col-md-3.col-xs-12.text-center
-														h3.panel-title Estatus:  
-															strong  Activo
-													.col-md-1.col-xs-3(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalDescripcion', data-trigger='hover')
-														i.spriteG2.eye(data-toggle="tooltip",data-placement="top",title="Descripción")
-													.col-md-1.col-xs-3
-														a(href="#")
-															i.spriteG2.editar(data-toggle="tooltip",data-placement="top",title="Configurar")
-													.col-md-1.col-xs-3(data-toggle="tooltip",data-placement="top",title="Eliminar")
-														i.spriteG2.delete(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover')
-													.col-md-1.col-xs-3
-														a(href="#")
-															i.spriteG2.descarga(data-toggle="tooltip",data-placement="top",title="Descarga el archivo del cupón")
+														h3.panel-title Titulo Cupón
+														h3.panel-title Codigo Cupón
+													.col-md-3.col-xs-12.text-center
+														h3.panel-title.fecha 31/12/2017 - 31/12/2017
+													.col-md-1.col-xs-6.text-center
+														h3.panel-title.fecha 100%
+													.col-md-2.col-xs-6.text-center
+														h3.panel-title.dato Producto
+														h3.panel-title.dato Plan
+														h3.panel-title.dato Ramo
+													.col-md-2.col-xs-12
+														.col-md-4.col-xs-4.text-center
+															a(href="#")
+																i.spriteG2.editar(data-toggle="tooltip",data-placement="top",title="Configurar")
+														.col-md-4.col-xs-4.text-center(data-toggle="tooltip",data-placement="top",title="Eliminar")
+															i.spriteG2.delete(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover')
+														.col-md-4.col-xs-4.text-center
+															a(href="#")
+																i.spriteG2.descarga(data-toggle="tooltip",data-placement="top",title="Descarga el archivo del cupón")
 								.col-md-12
-									.col-md-offset-1.col-md-10.campania
+									.col-md-offset-1.col-md-11.campania
 										.panel.panel-default
 											.panel-heading
 												.row
 													.col-md-1
 														input.check(type="checkbox",id="checkbox-a2", class="regular-checkbox big-checkbox")
 														label(for="checkbox-a2")
-													.col-md-4.col-xs-12.text-center
-														h3.panel-title Titulo Cupón
 													.col-md-3.col-xs-12.text-center
-														h3.panel-title Estatus:  
-															strong  Activo
-													.col-md-1.col-xs-3(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalDescripcion', data-trigger='hover')
-														i.spriteG2.eye(data-toggle="tooltip",data-placement="top",title="Descripción")
-													.col-md-1.col-xs-3
-														a(href="#")
-															i.spriteG2.editar(data-toggle="tooltip",data-placement="top",title="Configurar")
-													.col-md-1.col-xs-3(data-toggle="tooltip",data-placement="top",title="Eliminar")
-														i.spriteG2.delete(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover')
-													.col-md-1.col-xs-3
-														a(href="#")
-															i.spriteG2.descarga(data-toggle="tooltip",data-placement="top",title="Descarga el archivo del cupón")
+														h3.panel-title Titulo Cupón
+														h3.panel-title Codigo Cupón
+													.col-md-3.col-xs-12.text-center
+														h3.panel-title.fecha 31/12/2017 - 31/12/2017
+													.col-md-1.col-xs-6.text-center
+														h3.panel-title.fecha 100%
+													.col-md-2.col-xs-6.text-center
+														h3.panel-title.dato Producto
+														h3.panel-title.dato Plan
+														h3.panel-title.dato Ramo
+													.col-md-2.col-xs-12
+														.col-md-4.col-xs-3
+															a(href="#")
+																i.spriteG2.editar(data-toggle="tooltip",data-placement="top",title="Configurar")
+														.col-md-4.col-xs-3(data-toggle="tooltip",data-placement="top",title="Eliminar")
+															i.spriteG2.delete(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover')
+														.col-md-4.col-xs-3
+															a(href="#")
+																i.spriteG2.descarga(data-toggle="tooltip",data-placement="top",title="Descarga el archivo del cupón")
 								.col-md-12
-									.col-md-offset-1.col-md-10.campania
+									.col-md-offset-1.col-md-11.campania
 										.panel.panel-default
 											.panel-heading
 												.row
 													.col-md-1
 														input.check(type="checkbox",id="checkbox-a3", class="regular-checkbox big-checkbox")
 														label(for="checkbox-a3")
-													.col-md-4.col-xs-12.text-center
-														h3.panel-title Titulo Cupón
 													.col-md-3.col-xs-12.text-center
-														h3.panel-title Estatus:  
-															strong  Activo
-													.col-md-1.col-xs-3(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalDescripcion', data-trigger='hover')
-														i.spriteG2.eye(data-toggle="tooltip",data-placement="top",title="Descripción")
-													.col-md-1.col-xs-3
-														a(href="#")
-															i.spriteG2.editar(data-toggle="tooltip",data-placement="top",title="Configurar")
-													.col-md-1.col-xs-3(data-toggle="tooltip",data-placement="top",title="Eliminar")
-														i.spriteG2.delete(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover')
-													.col-md-1.col-xs-3
-														a(href="#")
-															i.spriteG2.descarga(data-toggle="tooltip",data-placement="top",title="Descarga el archivo del cupón")
+														h3.panel-title Titulo Cupón
+														h3.panel-title Codigo Cupón
+													.col-md-3.col-xs-12.text-center
+														h3.panel-title.fecha 31/12/2017 - 31/12/2017
+													.col-md-1.col-xs-6.text-center
+														h3.panel-title.fecha 100%
+													.col-md-2.col-xs-6.text-center
+														h3.panel-title.dato Producto
+														h3.panel-title.dato Plan
+														h3.panel-title.dato Ramo
+													.col-md-2.col-xs-12
+														.col-md-4.col-xs-3
+															a(href="#")
+																i.spriteG2.editar(data-toggle="tooltip",data-placement="top",title="Configurar")
+														.col-md-4.col-xs-3(data-toggle="tooltip",data-placement="top",title="Eliminar")
+															i.spriteG2.delete(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover')
+														.col-md-4.col-xs-3
+															a(href="#")
+																i.spriteG2.descarga(data-toggle="tooltip",data-placement="top",title="Descarga el archivo del cupón")
 								.col-md-12
-									.col-md-offset-1.col-md-10.campania
+									.col-md-offset-1.col-md-11.campania
 										.panel.panel-default
 											.panel-heading
 												.row
 													.col-md-1
 														input.check(type="checkbox",id="checkbox-a4", class="regular-checkbox big-checkbox")
 														label(for="checkbox-a4")
-													.col-md-4.col-xs-12.text-center
-														h3.panel-title Titulo Cupón
 													.col-md-3.col-xs-12.text-center
-														h3.panel-title Estatus:  
-															strong  Activo
-													.col-md-1.col-xs-3(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalDescripcion', data-trigger='hover')
-														i.spriteG2.eye(data-toggle="tooltip",data-placement="top",title="Descripción")
-													.col-md-1.col-xs-3
-														a(href="#")
-															i.spriteG2.editar(data-toggle="tooltip",data-placement="top",title="Configurar")
-													.col-md-1.col-xs-3(data-toggle="tooltip",data-placement="top",title="Eliminar")
-														i.spriteG2.delete(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover')
-													.col-md-1.col-xs-3
-														a(href="#")
-															i.spriteG2.descarga(data-toggle="tooltip",data-placement="top",title="Descarga el archivo del cupón")
+														h3.panel-title Titulo Cupón
+														h3.panel-title Codigo Cupón
+													.col-md-3.col-xs-12.text-center
+														h3.panel-title.fecha 31/12/2017 - 31/12/2017
+													.col-md-1.col-xs-6.text-center
+														h3.panel-title.fecha 100%
+													.col-md-2.col-xs-6.text-center
+														h3.panel-title.dato Producto
+														h3.panel-title.dato Plan
+														h3.panel-title.dato Ramo
+													.col-md-2.col-xs-12
+														.col-md-4.col-xs-3
+															a(href="#")
+																i.spriteG2.editar(data-toggle="tooltip",data-placement="top",title="Configurar")
+														.col-md-4.col-xs-3(data-toggle="tooltip",data-placement="top",title="Eliminar")
+															i.spriteG2.delete(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover')
+														.col-md-4.col-xs-3
+															a(href="#")
+																i.spriteG2.descarga(data-toggle="tooltip",data-placement="top",title="Descarga el archivo del cupón")
+													
 								.col-md-12
-									.col-md-offset-1.col-md-10.campania
+									.col-md-offset-1.col-md-11.campania
 										.panel.panel-default
 											.panel-heading
 												.row
 													.col-md-1
 														input.check(type="checkbox",id="checkbox-a5", class="regular-checkbox big-checkbox")
 														label(for="checkbox-a5")
-													.col-md-4.col-xs-12.text-center
-														h3.panel-title Titulo Cupón
 													.col-md-3.col-xs-12.text-center
-														h3.panel-title Estatus:  
-															strong  Activo
-													.col-md-1.col-xs-3(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalDescripcion', data-trigger='hover')
-														i.spriteG2.eye(data-toggle="tooltip",data-placement="top",title="Descripción")
-													.col-md-1.col-xs-3
-														a(href="#")
-															i.spriteG2.editar(data-toggle="tooltip",data-placement="top",title="Configurar")
-													.col-md-1.col-xs-3(data-toggle="tooltip",data-placement="top",title="Eliminar")
-														i.spriteG2.delete(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover')
-													.col-md-1.col-xs-3
-														a(href="#")
-															i.spriteG2.descarga(data-toggle="tooltip",data-placement="top",title="Descarga el archivo del cupón")
+														h3.panel-title Titulo Cupón
+														h3.panel-title Codigo Cupón
+													.col-md-3.col-xs-12.text-center
+														h3.panel-title.fecha 31/12/2017 - 31/12/2017
+													.col-md-1.col-xs-6.text-center
+														h3.panel-title.fecha 100%
+													.col-md-2.col-xs-6.text-center
+														h3.panel-title.dato Producto
+														h3.panel-title.dato Plan
+														h3.panel-title.dato Ramo
+													.col-md-2.col-xs-12
+														.col-md-4.col-xs-3
+															a(href="#")
+																i.spriteG2.editar(data-toggle="tooltip",data-placement="top",title="Configurar")
+														.col-md-4.col-xs-3(data-toggle="tooltip",data-placement="top",title="Eliminar")
+															i.spriteG2.delete(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover')
+														.col-md-4.col-xs-3
+															a(href="#")
+																i.spriteG2.descarga(data-toggle="tooltip",data-placement="top",title="Descarga el archivo del cupón")
 								.col-md-offset-1.col-md-10
 									nav(aria-label='...')
 										ul.pager
@@ -295,11 +338,44 @@ html
 												.input-group
 													.input-group-addon
 														i.sprite.cupon
-													input.form-control.fechafin(placeholder="Introduce el plan del cupón")
-											.col-xs-12
+													select.form-control
+														option Selecciona un Producto
+														option Fronterizos y legalizados
+														option Fronterizos y legalizados
+														option Fronterizos y legalizados
+
+											
+
+										.col-xs-12.text-center
+											h1 Relaciónes Producto cupón
+											br
+										.col-xs-12.campania
+											.panel.panel-default
+												.row
+													.col-md-1 
+													.col-md-6.col-xs-12.text-center
+														h3.panel-title
+															strong Producto
+													.col-md-5.col-xs-12.text-center
+														h3.panel-title
+															strong Ramo
+													
+										.col-xs-12.campania
+											.panel.panel-default
+												.panel-heading
+													.row
+														.col-md-1
+															input.check(type="checkbox",id="checkbox-b1", class="regular-checkbox big-checkbox")
+															label(for="checkbox-b1")
+														.col-md-6.col-xs-12.text-center
+															h3.panel-title.fecha Producto
+														.col-md-5.col-xs-12.text-center
+															h3.panel-title.fecha Ramo
+
+										.col-xs-12
 												br
 										.col-xs-12
-											.col-xs-4
+											.col-xs-offset-4.col-xs-4
 												.space
 												button.btn.btn-primary.btn-lg.btn-block
 													|  Crear
@@ -394,7 +470,11 @@ html
 									.input-group
 										.input-group-addon
 											i.sprite.cupon
-										input.form-control.fechafin(placeholder="Introduce el plan del cupón")
+										select.form-control
+											option Selecciona un Producto
+											option Fronterizos y legalizados
+											option Fronterizos y legalizados
+											option Fronterizos y legalizados
 								.col-xs-12
 									br
 							.col-xs-12
